cur_TS/temp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tmp-shell
  namespace: kubeflow-user-example-com
spec:
  serviceAccountName: s3-sa
  containers:
  - name: tmp-shell
    image: alpine
    command: ["/bin/sh"]
    stdin: true
    tty: true
